{
  "version": 4,
  "terraform_version": "1.0.9",
  "serial": 103,
  "lineage": "d60875e8-d75c-5371-90a3-d581e231e9c3",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/3f6e15d2-638c-457f-9e52-65081693a1d7/resourceGroups/exemple-aula-es22/providers/Microsoft.Network/networkInterfaces/example-nic",
            "internal_domain_name_suffix": "3hiimp1wkqaexebjtn0zoljywc.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/3f6e15d2-638c-457f-9e52-65081693a1d7/resourceGroups/exemple-aula-es22/providers/Microsoft.Network/publicIPAddresses/acceptanceTestPublicIp1",
                "subnet_id": "/subscriptions/3f6e15d2-638c-457f-9e52-65081693a1d7/resourceGroups/exemple-aula-es22/providers/Microsoft.Network/virtualNetworks/virtualNetwork/subnets/example-subnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-25-47-52",
            "name": "example-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "exemple-aula-es22",
            "virtual_machine_id": "/subscriptions/3f6e15d2-638c-457f-9e52-65081693a1d7/resourceGroups/exemple-aula-es22/providers/Microsoft.Compute/virtualMachines/es22-vm"
          },
          "dependencies": [
            "azurerm_public_ip.example",
            "azurerm_resource_group.main",
            "azurerm_subnet.internal",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "example-isga-aulaes22",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3f6e15d2-638c-457f-9e52-65081693a1d7/resourceGroups/exemple-aula-es22/providers/Microsoft.Network/networkInterfaces/example-nic|/subscriptions/3f6e15d2-638c-457f-9e52-65081693a1d7/resourceGroups/exemple-aula-es22/providers/Microsoft.Network/networkSecurityGroups/acceptanceTestSecurityGroup1",
            "network_interface_id": "/subscriptions/3f6e15d2-638c-457f-9e52-65081693a1d7/resourceGroups/exemple-aula-es22/providers/Microsoft.Network/networkInterfaces/example-nic",
            "network_security_group_id": "/subscriptions/3f6e15d2-638c-457f-9e52-65081693a1d7/resourceGroups/exemple-aula-es22/providers/Microsoft.Network/networkSecurityGroups/acceptanceTestSecurityGroup1"
          },
          "dependencies": [
            "azurerm_virtual_network.main",
            "azurerm_network_interface.main",
            "azurerm_network_security_group.example",
            "azurerm_public_ip.example",
            "azurerm_resource_group.main",
            "azurerm_subnet.internal"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/3f6e15d2-638c-457f-9e52-65081693a1d7/resourceGroups/exemple-aula-es22/providers/Microsoft.Network/networkSecurityGroups/acceptanceTestSecurityGroup1",
            "location": "eastus",
            "name": "acceptanceTestSecurityGroup1",
            "resource_group_name": "exemple-aula-es22",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3306",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/3f6e15d2-638c-457f-9e52-65081693a1d7/resourceGroups/exemple-aula-es22/providers/Microsoft.Network/networkSecurityGroups/acceptanceTestSecurityGroup1/securityRules/mysql",
            "name": "mysql",
            "network_security_group_name": "acceptanceTestSecurityGroup1",
            "priority": 101,
            "protocol": "TCP",
            "resource_group_name": "exemple-aula-es22",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.example",
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/3f6e15d2-638c-457f-9e52-65081693a1d7/resourceGroups/exemple-aula-es22/providers/Microsoft.Network/publicIPAddresses/acceptanceTestPublicIp1",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.106.130.129",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "acceptanceTestPublicIp1",
            "resource_group_name": "exemple-aula-es22",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/3f6e15d2-638c-457f-9e52-65081693a1d7/resourceGroups/exemple-aula-es22/providers/Microsoft.Network/virtualNetworks/virtualNetwork/subnets/example-subnet",
            "name": "example-subnet",
            "resource_group_name": "exemple-aula-es22",
            "virtual_network_name": "virtualNetwork"
          },
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "3f86d0e9-5476-4b00-9029-9b75972d38b2",
            "id": "/subscriptions/3f6e15d2-638c-457f-9e52-65081693a1d7/resourceGroups/exemple-aula-es22/providers/Microsoft.Network/virtualNetworks/virtualNetwork",
            "location": "eastus",
            "name": "virtualNetwork",
            "resource_group_name": "exemple-aula-es22",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/3f6e15d2-638c-457f-9e52-65081693a1d7/resourceGroups/exemple-aula-es22/providers/Microsoft.Network/virtualNetworks/virtualNetwork/subnets/example-subnet",
                "name": "example-subnet"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}